salesforce/force-app/main/default/objects/Compliance_Assessment__c/Compliance_Assessment__c.object-meta.xml
<CustomObject>
    <description>Final compliance decision per rule per supplier</description>
    <label>Compliance Assessment</label>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>