salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <description>The AI engine's confidence (0-100) in this document assessment, returned by /assess. Surfaced per-document on the Documents &amp; screening and submission summary screens.</description>
    <label>AI Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>