salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Analyst_Comment__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Comment__c</fullName>
    <description>The analyst&apos;s own manual validation comment on this document/finding (distinct from the AI Reason Detail).</description>
    <label>Analyst Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>