salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Analyst_Validated__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the analyst has manually reviewed and validated this document/finding.</description>
    <label>Analyst Validated</label>
    <type>Checkbox</type>
</CustomField>