salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Compliance_Document__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked document used for this assessment</description>
    <label>Compliance Document</label>
    <referenceTo>Compliance_Document__c</referenceTo>
    <relationshipName>Compliance_Assessments_Doc</relationshipName>
    <type>Lookup</type>
</CustomField>