salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Evaluated_By__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_By__c</fullName>
    <description>Whether this assessment was generated automatically or manually overridden</description>
    <label>Evaluated By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Manual_Override</fullName>
                <label>Manual Override</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>