salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Evaluation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_DateTime__c</fullName>
    <description>When this compliance assessment was generated</description>
    <label>Evaluation Date/Time</label>
    <type>DateTime</type>
</CustomField>