salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Evaluator_User__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who performed a manual override evaluation</description>
    <label>Evaluator User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compliance_Assessments_Evaluator</relationshipName>
    <type>Lookup</type>
</CustomField>