salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Procurement_Decision__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Decision__c</fullName>
    <description>Procurement&apos;s own Approve/Reject/Deferred decision on this uploaded document, distinct from the AI&apos;s Status__c verdict and from the Analyst&apos;s Analyst_Validated__c sign-off — a separate, earlier checkpoint that never overrides either. Deferred means Procurement can&apos;t make the call and the document needs a specialist&apos;s read once the case reaches an Analyst — see Procurement_Decision_Reason__c for the note, which is Analyst-only, never shown to the supplier. Set via VendorPortalController.recordProcurementDecision.</description>
    <label>Procurement Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>