salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Procurement_Decision_By__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Decision_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Procurement user who recorded Procurement_Decision__c.</description>
    <label>Procurement Decision By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compliance_Assessments_ProcDecision</relationshipName>
    <type>Lookup</type>
</CustomField>