salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Procurement_Decision_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Decision_DateTime__c</fullName>
    <description>When Procurement_Decision__c was recorded.</description>
    <label>Procurement Decision Date/Time</label>
    <type>DateTime</type>
</CustomField>