salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Procurement_Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Decision_Reason__c</fullName>
    <description>Procurement&apos;s reason for Procurement_Decision__c — required whenever a decision is recorded.</description>
    <label>Procurement Decision Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>