salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Detail__c</fullName>
    <description>Human-readable explanation of the compliance outcome</description>
    <label>Reason Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>