salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Requirement_Key__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Key__c</fullName>
    <description>Reference to Compliance_Requirement__mdt record</description>
    <externalId>true</externalId>
    <label>Requirement Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>