salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Requirement_Label__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Label__c</fullName>
    <description>Snapshot of requirement label for historical reproducibility</description>
    <label>Requirement Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>