salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Final compliance outcome</description>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non_Compliant</fullName>
                <label>Non-Compliant</label>
            </value>
            <value>
                <fullName>At_Risk</fullName>
                <label>At Risk</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>