salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Supplier being assessed</description>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Compliance_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>