salesforce/force-app/main/default/objects/Compliance_Assessment__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <description>When this assessment expires, typically matching the linked document&apos;s expiry date</description>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>